--- a/index.haml
+++ b/index.haml
@@ -2,7 +2,7 @@
 %html(lang='en')
   %head
     %meta(charset='UTF-8')
-    %title Y O L K
+    %title LOL
     %link(href='stylesheets/screen.css' media='screen, projection' rel='stylesheet' type='text/css')
   %body
     #miniwindow
